<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.qubership.mockingbird</groupId>
    <artifactId>mockingbird</artifactId>
    <version>5.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>ITF Executor Service</description>
    <url>https://github.com/Netcracker/qubership-testing-platform-itf-executor</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Netcracker</name>
            <email>opensourcegroup@netcracker.com</email>
            <organization>Netcracker Technology</organization>
            <organizationUrl>https://www.netcracker.com</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https//github.com/Netcracker/qubership-testing-platform-itf-executor.git</connection>
        <developerConnection>scm:git:https://github.com/Netcracker/qubership-testing-platform-itf-executor.git</developerConnection>
        <url>scm:git:https://github.com/Netcracker/qubership-testing-platform-itf-executor.git</url>
        <tag>HEAD</tag>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>-Dfile.encoding=UTF-8 -Dconfig.file=${maven.multiModuleProjectDirectory}/common/application.properties -Dspring.config.location=${maven.multiModuleProjectDirectory}/common/application.properties -Dlogging.config=${maven.multiModuleProjectDirectory}/common/logback-spring.xml</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.1.1</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.18.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.5.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.40</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <!--modules for building process-->
        <module>parent/build-tools</module>
        <module>parent/parent-dependencies</module>
        <module>parent/parent-java</module>
        <!--Pact tests module-->
        <module>mockingbird-contract-test-pacts</module>
        <!--Modules are main-->
        <module>mockingbird-core</module>
        <module>mockingbird-core-utils</module>

        <module>mockingbird-execution-utils</module>

        <!--Modules for storage-->
        <module>mockingbird-configuration-common</module>

        <!--Modules for reporting some info-->
        <module>mockingbird-report-atp</module>

        <!--module for execution of velocity code-->
        <module>mockingbird-template-velocity</module>
        <!--module interceptor. mostly encryption -->
        <module>mockingbird-interceptors</module>
        <!--ITF transport level module-->
        <module>mockingbird-transports-camel</module>

        <module>mockingbird-rest-openapi-specifications</module>

        <!--Modules for integration with other tools-->
        <module>mockingbird-integration-atp</module>
        <module>mockingbird-integration-bv</module>
        <module>mockingbird-integration-atp2</module>
        <module>mockingbird-integration-envconf</module>

        <!--The module is aggregator-->
        <module>mockingbird-aggregator</module>

        <!--pom for compile ready project and some local resources-->
        <module>common</module>

    </modules>

    <repositories>
        <!-- Maven Central repository for release versions -->
        <repository>
            <id>oss.sonatype.org</id>
            <url>https://central.sonatype.com</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <!-- Maven Central repository for SNAPSHOT versions-->
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

        <!-- GitHub packages repository for both release and SNAPSHOT versions -->
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/*</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>central</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                            <!-- Commented - it's an attempt to make release to Central (very slow now)
                            <waitUntil>published</waitUntil>
                            -->
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.6.3</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <repository>
                    <id>central</id>
                    <name>Central Maven Repository</name>
                </repository>
            </distributionManagement>
        </profile>

        <profile>
            <id>github</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <distributionManagement>
                <repository>
                    <id>github</id>
                    <name>GitHub Packages</name>
                    <url>https://maven.pkg.github.com/Netcracker/qubership-testing-platform-itf-executor</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>

    <pluginRepositories>
        <pluginRepository>
            <id>oss.sonatype.org</id>
            <url>https://central.sonatype.com</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>

        <pluginRepository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>

        <pluginRepository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/*</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
